[tool.poetry]
name = "colors-api"
version = "0.1.0"
description = ""
authors = ["NatanDuarte <natanprocopio@gmail.com>"]
readme = "README.md"
packages = [{include = "colors_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
httpx = "^0.24.1"
uvicorn = "^0.23.2"
opencv-python = "^4.8.0.76"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
